# MangoBox

./: Cargo.toml  LICENSE  Makefile  README.md  manifest.json
extension/: chat.css  chat.html  chat.js  hello.html  manifest.json  options.html  popup.css  popup.html  popup.js
mango-api/: Cargo.toml
mango-api/src/: lib.rs
mango-chat-server/: Cargo.toml
mango-chat-server/src/: main.rs  moderating.rs
mango-chat-server/src/actors/: chat_server.rs  chat_session.rs
mango-chat-server/src/messages/: server.rs
mango-chat-server/src/messages/session/: mod.rs  wsmessage.rs
mango-chat-server/src/models/: mod.rs
mango-tui/: Cargo.toml  README.md
mango-tui/src/: app.rs  main.rs  term.rs
mango-tui/src/layouts/: dashboard.rs
mangod/: Cargo.toml
